--- a/core/templates/cliente/cliente_list.html
+++ b/core/templates/cliente/cliente_list.html
@@ -25,7 +25,8 @@
     <!-- Campo de búsqueda -->
     <form method="GET" action="{% url 'cliente_list' %}" class="search-form" id="search-form">
       <div class="search-container">
-        <div class="input-group gap-2">
+        <div class="input-group gap-2" data-bs-toggle="tooltip" data-bs-placement="top"
+          title="Buscar cliente por nombre, apellido o teléfono">
           <input type="text" id="search-cliente-cliente" name="term" class="form-control" 
                  placeholder="Buscar cliente" value="{{ search_term }}">
           <button id="btn-search" class="btn btn-search" type="submit">
