--- a/core/templates/reparacion/reparacion_list.html
+++ b/core/templates/reparacion/reparacion_list.html
@@ -77,7 +77,8 @@
     <div class="header-icons header-icons-reparacion">
         <a href="{% url 'reparacion_create' %}" class="btn btn-add me-3">Agregar reparación</a>
         <form method="get" action="{% url 'reparacion_list' %}" class="search-form">
-            <div class="input-group input-group-reparacion" style="gap: 10px;">
+            <div class="input-group input-group-reparacion" style="gap: 10px;" data-bs-toggle="tooltip"
+          data-bs-placement="top" title="Buscar reparacion por codigo, cliente o tecnico">
                 <input type="text" name="search" class="form-control form-control-reparacion"
                     placeholder="Buscar reparación" value="{{ request.GET.search }}">
                 <button class="btn btn-search" type="submit">
@@ -92,7 +93,8 @@
                 <input type="hidden" name="search" value="{{ search }}">
                 {% endif %}
 
-                <select name="estado" class="form-select form-select-sm" onchange="this.form.submit()">
+                <select name="estado" class="form-select form-select-sm" onchange="this.form.submit()" data-bs-toggle="tooltip"
+                    data-bs-placement="top" title="Filtrar reparacion por estado">
                     {% for valor, texto in estados %}
                     <option value="{{ valor }}" {% if filtro_estado == valor %}selected{% endif %}>
                         {{ texto }}
