--- a/core/templates/cliente/cliente_list.html
+++ b/core/templates/cliente/cliente_list.html
@@ -11,6 +11,10 @@
     border-top-right-radius: 4px !important;
     border-bottom-right-radius: 4px !important;
   }
+
+  .content {
+    overflow: scroll;
+  }
   
 </style>
 
@@ -53,7 +57,7 @@
           <th>Nombre</th>
           <th>Apellido</th>
           <th>Teléfono</th>
-          <th></th>
+          <th>Acciones</th>
         </tr>
       </thead>
       <tbody>
