--- a/core/templates/usuario/usuario_list.html
+++ b/core/templates/usuario/usuario_list.html
@@ -2,6 +2,11 @@
 {% load static %}
 
 {% block content %}
+<style>
+  .content {
+    overflow: scroll;
+  }
+</style>
 
 <div class="main-content">
   <!-- Botón Agregar reparación -->
@@ -9,7 +14,7 @@
     <h2 class="titulo">USUARIOS</h2>
     <a href="{% url 'usuario_create' %}" class="btn btn-add me-3s"> Agregar Usuario</a>
   </div>
-
+  <br>
   <!-- Lista de reparaciones -->
   <div class="table-container">
     <table class="table table-hover align-middle custom-table">
@@ -22,7 +27,6 @@
       </thead>
       <tbody>
         {% for usuario in usuarios %}
-        {% if not usuario.is_superuser %}
         <tr>
           <td style="padding-right: 60%;">
             <i class="bi bi-person fs-4"></i>
@@ -41,7 +45,6 @@
               <i class="bi bi-trash fs-4"></i>
             </a>
         </tr>
-        {% endif %}
         {% endfor %}
       </tbody>
 
@@ -195,30 +198,27 @@
     <!-- Paginación -->
     {% if is_paginated %}
     <nav aria-label="Page navigation">
-      <ul class="pagination">
+        <ul class="pagination">
+            <li class="page-item">
+                <a class="page-link"
+                    href="{% if page_obj.has_previous %}?page={{ page_obj.previous_page_number }} {% endif %}">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
 
-        <li class="page-item">
-          <a class="page-link"
-            href="{% if page_obj.has_previous %}?page={{ page_obj.previous_page_number }} {% endif %}">
-            <span aria-hidden="true">&laquo;</span>
-          </a>
-        </li>
+            {% for num in page_obj.paginator.page_range %}
+            <li class="page-item {% if page_obj.number == num %}active{% endif %}">
+                <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+            </li>
+            {% endfor %}
 
-
-        {% for num in page_obj.paginator.page_range %}
-        <li class="page-item {% if page_obj.number == num %}active{% endif %}">
-          <a class="page-link" href="?page={{ num }}">{{ num }}</a>
-        </li>
-        {% endfor %}
-
-        <li class="page-item">
-          <a class="page-link" href="{% if page_obj.has_next %} ?page={{ page_obj.next_page_number }} {% endif %}"
-            aria-label="Next">
-            <span aria-hidden="true">&raquo;</span>
-          </a>
-        </li>
-
-      </ul>
+            <li class="page-item">
+                <a class="page-link" href="{% if page_obj.has_next %} ?page={{ page_obj.next_page_number }} {% endif %}"
+                    aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+            </li>
+        </ul>
     </nav>
     {% endif %}
   </div>
