HU Editar un reloj y agregar la venta de un reloj
* clone del proyecto

* Plantilla base para el dashboard

* Se comprobó que cambiara la base según el usuario que se encuentre activo

* acomode frontend de cliente

* Se modificó agregar cliente y se implementó bootstrap

* Finalizado la base.html y el agregar cliente

* botones

* comprobaciones

* cambios en la sidebar

* ventana emergente de cliente

* ventana emergente corregida

* acomodar reloj

* formulario de agregar usuario

* formulario de usuario

* agregar usuario completado con mensajes resaltados en rojo

* Creacion de HU de egreso en usuario 

* creacion de HU de egreso terminada

* Merge Migrate

* mejora de pruebas de views de egreso

* Otra prueba de test en egreso

* Test de egreso mejorados

* Tests arreglados

* Merge migrations

---------

Co-authored-by: David Santiago Cordoba Perdomo <cordoba.david@correounivalle.edu.co>

* errores remarcan en rojo el input de formulario cliente

* tabla de usuarios (no terminada)

* se quedó un }

* migraciones

* se acomodaron los css

* test y service de usuario

* eliminar archivo db

* eliminar .coverage

* xd

* eliminar ahora sí .coverage

* borrar todo egresos

* eliminar egreso (completo)

* test de usuario mas completos

* Tests de usuario

* tablas

* comit para pasar

* ya quedo

* lapiz mejorado

* probando

* cambio en el test reparacion

* eliminar y editar usuario

* overflow

* comit para merge

* formularios

* acomode iconos de tablas y form de usuario

* cambios para entrega

* cambios de form usuario

* reloj form y model

* test de reloj

* Terminada la funcionalidad de agregar reloj

* ajuste de reparación view

* quitar un script

* cambio a español el calendario

* arreglando issues

* Interfaces para vender y editar un reloj

* tests de editar un reloj

* tests de venta, ya crea y edita bien un reloj

* acomodando el filtro

* funciona la busqueda del cliente desde venta, la lista de venta solo muestra los disponibles

* HU venta rel

--- a/core/templates/cliente/cliente_list.html
+++ b/core/templates/cliente/cliente_list.html
@@ -11,6 +11,10 @@
     border-top-right-radius: 4px !important;
     border-bottom-right-radius: 4px !important;
   }
+
+  .content {
+    overflow: scroll;
+  }
   
 </style>
 
@@ -25,7 +29,8 @@
     <!-- Campo de búsqueda -->
     <form method="GET" action="{% url 'cliente_list' %}" class="search-form" id="search-form">
       <div class="search-container">
-        <div class="input-group gap-2">
+        <div class="input-group gap-2" data-bs-toggle="tooltip" data-bs-placement="top"
+          title="Buscar cliente por nombre, apellido o teléfono">
           <input type="text" id="search-cliente-cliente" name="term" class="form-control" 
                  placeholder="Buscar cliente" value="{{ search_term }}">
           <button id="btn-search" class="btn btn-search" type="submit">
@@ -52,7 +57,7 @@
           <th>Nombre</th>
           <th>Apellido</th>
           <th>Teléfono</th>
-          <th></th>
+          <th>Acciones</th>
         </tr>
       </thead>
       <tbody>
